--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -1,3 +1,7 @@
+<h1>Students Index</h1>
+
 <% @students.each do |s| %>
   <p><%= s.name %></p>
 <% end %>
+
+<a href="/students/new">Create a New Student</a>
