--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -1,7 +1,147 @@
-<h1>Students Index</h1>
+<body class="home page students">
+  <!-- Begin Main Wrapper -->
+  <div class="main-wrapper">
+    <!-- Begin Header -->
+    <div class="header-wrapper">
+      <div class="header">
+        <div class="header-left">
+          <h1 class="logo-text">
+            <a href="/" title="The Flatiron School">
+              <img src="http://students.flatironschool.com/img/the-flatiron-school-logo-sm-black.png" class="logo">
+            </a>
+          </h1>
+        </div>
+        <div class="header-right">
+          <div class="menu-header-container">
+            <ul id="nav" class="nav">
+              <li class="menu-item">
+                <a href="http://flatironschool.com/index.html">Home</a>
+              </li>
+              <li>
+                <a href="http://flatironschool.com/program.html">The Program</a>
+                <ul class="sub-menu">
+                  <li><a href="http://flatironschool.com/program.html">Basics</a></li>
+                  <li><a href="http://flatironschool.com/curriculum.html">Curriculum</a></li>
+                  <li><a href="http://flatironschool.com/faculty.html">Faculty</a></li>
+                  <li><a href="http://flatironschool.com/speakers.html">Guest Speakers</a></li>
+                  <li><a href="http://flatironschool.com/faq.html">FAQ</a></li>
+                  <li><a href="http://prework.flatironschool.com">Our Prework</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">The School</a>
 
-<% @students.each do |s| %>
-  <a href="/students/<%=s.slug%>"><%= s.name %></a><br/>
-<% end %>
+                <ul class="sub-menu">
+                  <li><a href="http://flatironschool.com/events.html">Events</a></li>
+                  <li><a href="http://flatironschool.com/contact.html">Contact</a></li>
+                  <li><a href="http://students.flatironschool.com/">Students</a></li>
+                </ul>
 
-<a href="/students/new">Create a New Student</a>
+              </li>
+              <li><a href="http://info.flatironschool.com/summer-2013-application"><font color="#26c4ff">Apply</font></a>
+              </li>
+              <li>
+                <a href="http://flatironschool.com/employers.html">Employers</a>
+              </li>
+              <li>
+                <a href="http://blog.flatironschool.com/">Blog</a>
+              </li>
+              <li><a href="http://highschool.flatironschool.com/" target="_blank">High School</a></li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+    <!-- End Header -->
+
+    <!-- Begin Content -->
+    <div class="container">
+
+      <!-- Begin Title Content -->
+      <div class="page-title">
+        <h2>Every Story Has Heroes</h2>
+        <h3>We're 39 people on a journey to learn to love code.</h3>
+      </div>
+      <!-- End Title Content -->
+
+      <!-- Begin Student Index -->
+      <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
+        <div class="section section-services student-index">
+          <div class="section-title">
+            <span>Flatiron School Class 004</span>
+          </div>
+        </div>
+
+        <div class="section section-blog">
+          <div class="home-blog clearfix">
+            <ul>
+              <!-- Duplicate li code block above to place more students here -->
+              <% @students.each do |student| %>
+              <!-- Begin student -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/<%= student.slug%>">
+                    <img width="304" height="304" class="prof-image" src="<%=student.profile_image%>" class="attachment-blog-thumb wp-post-image" alt="<%=student.name%>">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/<%= student.slug%>"><%=student.name%></a>
+                    </h3>
+                  </div>
+                  
+                  <p class="home-blog-post-meta"></p>
+                </div>
+                <div class="clear"></div>
+                <div class="excerpt">
+                  <p><%=student.quote%></p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <% end %>
+              <!-- End Justin Belmont -->
+             </ul>
+          </div>
+        </div>
+      </div>
+      <!-- End Student Index -->
+
+    </div>
+    <div class="clear"></div>
+    <!-- End Content -->
+  </div>
+  <!-- End Main Wrapper -->
+
+
+
+  <!-- Begin Footer -->
+  <div class="footer">
+    <div class="footer-text">
+      <div class="footer-text-right">
+        <div class="copyright">&copy; 2014. The Flatiron School. All Your Rights Are Belong To Us.</div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <!-- End Footer -->
+
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-33578770-1']);
+    _gaq.push(['_setDomainName', 'flatironschool.com']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+
+</body>
