--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+  <meta charset="UTF-8" />
+  <meta name="viewport" content ="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+  <title>The Flatiron School</title>
+  <link rel='stylesheet' href="stylesheets/style.css" type='text/css' media='all' />
+
+</head>
+
+
 <body class="home page students">
   <!-- Begin Main Wrapper -->
   <div class="main-wrapper">
@@ -145,3 +157,5 @@
   </script>
 
 </body>
+
+</html>
