--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -11,7 +11,7 @@
 
 <a href="/students/<%= @student.slug %>/edit">Edit</a><br/>
 
-<form action="/students/<%= @student.slug %>/destroy" method="post">
+<form action="/students/<%= @student.slug %>/delete" method="post">
   <input type="submit" value="destroy">
 </form>
 
